--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="navbar navbar-default navbar-static-top navbar-style">
+            <div class="navbar navbar-default navbar-inverse navbar-static-top" id="barra">
               <div class="container">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
@@ -19,51 +19,51 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#"><span>Brand</span></a>
+                  <a class="navbar-brand" id="logo-gdo"><img height="20" alt="Brand" src="images\logo-gdo.fw.png" class="img-thumbnail"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-                  <ul class="lead nav nav-style navbar-nav navbar-right">
+                  <ul class="lead nav navbar-nav navbar-right" id="navigation-menu">
                     <li class="active">
                       <a href="#">Home</a>
                     </li>
                     <li>
                       <a href="#">Contacts</a>
                     </li>
-                    <li>
-                      <a href="#">About us</a>
-                    </li>
-                    <li>
-                      <a href="#">Services</a>
-                    </li>
                   </ul>
-                </div>
+                <p class="navbar-left navbar-text" id="site-name">Gente de Oficio</p></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="carousel slide" id="fullcarousel-example" data-interval="false" data-ride="carousel">
+    <div class="carousel slide" id="fullcarousel-example" data-interval="4000" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="item active slideshow-style">
-          <img src="images/construction-287867_1280.jpg">
+        <div class="item slideshow-style">
+          <img src="images/construction-1280x500.jpg">
           <div class="carousel-caption">
-            <h2>Title</h2>
-            <p>Description</p>
+            <h2>Construcción</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud</p>
           </div>
         </div>
-        <div class="item">
-          <img src="images/girl-346231_1280.jpg">
+        <div class="active item slideshow-style">
+          <img src="images/girl-1280x500.jpg">
           <div class="carousel-caption">
-            <h2>Title</h2>
-            <p>Description</p>
+            <h2 class="">Mecánica</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud</p>
           </div>
         </div>
         <div class="item slideshow-style">
-          <img src="images/plumber-228010_1280.jpg">
+          <img src="images/plumber-1280x500.jpg">
           <div class="carousel-caption">
-            <h2>Title</h2>
-            <p>Description</p>
+            <h2>Plomería</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud</p>
           </div>
         </div>
       </div>
@@ -73,62 +73,31 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="section">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive">
-                  </div>
-                  <div class="col-md-6">
-                    <h1>A title</h1>
-                    <h3>A subtitle</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                      ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-                      dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-                      nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                      Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-                      enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-                      felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-                      elementum semper nisi.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="col-md-4">
+            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-service">
+            <h2>A Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+              <br>Ut enim ad minim veniam, quis nostrud</p>
+          </div>
+          <div class="col-md-4">
+            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
+            <h2>A title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+              <br>Ut enim ad minim veniam, quis nostrud</p>
+          </div>
+          <div class="col-md-4">
+            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-others">
+            <h2>A title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+              <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <h1>A title</h1>
-                    <h3>A subtitle</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                      ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-                      dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-                      nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                      Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-                      enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-                      felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-                      elementum semper nisi.</p>
-                  </div>
-                  <div class="col-md-6">
-                    <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="section section-primary">
+    <footer class="section" id="footer-section">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
