--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" id="logo-gdo"><img height="20" alt="Brand" src="images\logo-gdo.fw.png" class="img-thumbnail"></a>
+                  <a class="navbar-brand" id="logo-gdo"><img height="20" alt="Brand" src="images/logo-gdo.fw.png" class="img-thumbnail"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                   <ul class="lead nav navbar-nav navbar-right" id="navigation-menu">
