--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-service">
+            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-service">
             <h2>A Title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
               <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
           <div class="col-md-4">
-            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
+            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
             <h2>A title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
               <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
           <div class="col-md-4">
-            <img src="images\tool-145375_640.png" class="img-circle img-responsive" id="img-others">
+            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-others">
             <h2>A title</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
