--- a/index.html
+++ b/index.html
@@ -70,34 +70,34 @@
       <a class="left carousel-control" href="#fullcarousel-example" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
       <a class="right carousel-control" href="#fullcarousel-example" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
     </div>
-    <div class="section">
+    <div class="section" id="thumbnails-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-service">
-            <h2>A Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+            <h2 class="text-center">Ofrezco Servicios</h2>
+            <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
               <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
-            <h2>A title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
-              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-              <br>Ut enim ad minim veniam, quis nostrud</p>
+            <h2 class="text-center">La Empresa</h2>
+            <p contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisici elit,
+sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+Ut enim ad minim veniam, quis nostrud.<br><br>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-others">
-            <h2>A title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+            <h2 class="text-center">Busco Servicios</h2>
+            <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
               <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
         </div>
       </div>
     </div>
-    <footer class="section" id="footer-section">
+    <div class="section section-primary"><div class="container"><div class="row"><div class="col-md-12"><h1 class="text-center">Location</h1></div></div></div></div><div class="section section-primary" id="map-section"><div class="container"><div class="row"><div class="col-md-12"><img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?center=Tombouctou,Mali&amp;zoom=12&amp;size=1200x300&amp;sensor=false" id="map-google"></div></div></div></div><footer class="section" id="footer-section">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
