Commit of Demos

--- a/index.html
+++ b/index.html
@@ -1,136 +1,159 @@
 <html><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
-  </head><body>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="navbar navbar-default navbar-inverse navbar-static-top" id="barra">
-              <div class="container">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" id="logo-gdo"><img height="20" alt="Brand" src="images/logo-gdo.fw.png" class="img-thumbnail"></a>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="style.css" rel="stylesheet" type="text/css">
+    </head><body data-spy="scroll">
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="navbar navbar-default navbar-inverse navbar-static-top" id="barra">
+                            <div class="container">
+                                <div class="navbar-header">
+                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+                                        <span class="sr-only">Toggle navigation</span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                    </button>
+                                    <a class="navbar-brand" id="logo-gdo"><img height="20" alt="Brand" src="images/logo-gdo.fw.png" class="img-thumbnail"></a>
+                                </div>
+                                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+                                    <ul class="lead nav navbar-nav navbar-right" id="navigation-menu">
+                                        <li class="active">
+                                            <a href="#">Home</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Contacts</a>
+                                        </li>
+                                    </ul>
+                                    <p class="navbar-left navbar-text" id="site-name">Gente de Oficio</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-                  <ul class="lead nav navbar-nav navbar-right" id="navigation-menu">
-                    <li class="active">
-                      <a href="#">Home</a>
-                    </li>
-                    <li>
-                      <a href="#">Contacts</a>
-                    </li>
-                  </ul>
-                <p class="navbar-left navbar-text" id="site-name">Gente de Oficio</p></div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-    <div class="carousel slide" id="fullcarousel-example" data-interval="4000" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="item slideshow-style">
-          <img src="images/construction-1280x500.jpg">
-          <div class="carousel-caption">
-            <h2>Construcción</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
-              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-              nostrud</p>
-          </div>
-        </div>
-        <div class="active item slideshow-style">
-          <img src="images/girl-1280x500.jpg">
-          <div class="carousel-caption">
-            <h2 class="">Mecánica</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
-              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-              nostrud</p>
-          </div>
-        </div>
-        <div class="item slideshow-style">
-          <img src="images/plumber-1280x500.jpg">
-          <div class="carousel-caption">
-            <h2>Plomería</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
-              incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-              nostrud</p>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#fullcarousel-example" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
-      <a class="right carousel-control" href="#fullcarousel-example" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
-    </div>
-    <div class="section" id="thumbnails-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-service">
-            <h2 class="text-center">Ofrezco Servicios</h2>
-            <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
-              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-              <br>Ut enim ad minim veniam, quis nostrud</p>
-          </div>
-          <div class="col-md-6">
-            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
-            <h2 class="text-center">La Empresa</h2>
-            <p contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisici elit,
-sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud.<br><br>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-          </div>
-          <div class="col-md-3">
-            <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-others">
-            <h2 class="text-center">Busco Servicios</h2>
-            <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
-              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-              <br>Ut enim ad minim veniam, quis nostrud</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="section section-primary"><div class="container"><div class="row"><div class="col-md-12"><h1 class="text-center">Location</h1></div></div></div></div><div class="section section-primary" id="map-section"><div class="container"><div class="row"><div class="col-md-12"><img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?center=Tombouctou,Mali&amp;zoom=12&amp;size=1200x300&amp;sensor=false" id="map-google"></div></div></div></div><footer class="section" id="footer-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <h1>Footer header</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
-              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-              <br>Ut enim ad minim veniam, quis nostrud</p>
-          </div>
-          <div class="col-sm-6">
-            <p class="text-info text-right">
-              <br>
-              <br>
-            </p>
-            <div class="row">
-              <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
+        <div class="carousel slide" id="fullcarousel-example" data-interval="4000" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="item slideshow-style">
+                    <img src="images/construction-1280x500.jpg">
+                    <div class="carousel-caption">
+                        <h2>Construcción</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+                            incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud</p>
+                    </div>
+                </div>
+                <div class="active item slideshow-style">
+                    <img src="images/girl-1280x500.jpg">
+                    <div class="carousel-caption">
+                        <h2 class="">Mecánica</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+                            incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud</p>
+                    </div>
+                </div>
+                <div class="item slideshow-style">
+                    <img src="images/plumber-1280x500.jpg">
+                    <div class="carousel-caption">
+                        <h2>Plomería</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+                            incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud</p>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-              <div class="col-md-12 hidden-xs text-right">
-                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
-            </div>
-          </div>
+            <a class="left carousel-control" href="#fullcarousel-example" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
+            <a class="right carousel-control" href="#fullcarousel-example" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
         </div>
-      </div>
-    </footer>
-  
+        <div class="section" id="thumbnails-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-service">
+                        <h2 class="text-center">Ofrezco Servicios</h2>
+                        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                            <br>Ut enim ad minim veniam, quis nostrud</p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-requirement">
+                        <h2 class="text-center">La Empresa</h2>
+                        <p contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+                            incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud.
+                            <br>
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
+                            incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/tool-145375_640.png" class="img-circle img-responsive" id="img-others">
+                        <h2 class="text-center">Busco Servicios</h2>
+                        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                            <br>Ut enim ad minim veniam, quis nostrud</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Location</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-primary" id="map-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?center=Tombouctou,Mali&amp;zoom=12&amp;size=1200x300&amp;sensor=false" id="map-google">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="section" id="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1>Footer header</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                            <br>Ut enim ad minim veniam, quis nostrud</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="text-info text-right">
+                            <br>
+                            <br>
+                        </p>
+                        <div class="row">
+                            <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+                                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 hidden-xs text-right">
+                                <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    
 
 </body></html>
