--- a/dedmo03.html
+++ b/dedmo03.html
@@ -6,5 +6,32 @@
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="images\dedmo03.css" rel="stylesheet" type="text/css">
     </head><body>
+        <div class="navbar navbar-default navbar-fixed-top" id="barra">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand"><span>Brand</span></a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+                    <ul class="lead nav navbar-nav navbar-right">
+                        <li class="active">
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="container-fluid banner-image"></div>
+        </div>
+    
 
-<div class="navbar navbar-default navbar-fixed-top"><div class="container"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="#"><span>Brand</span></a></div><div class="collapse navbar-collapse" id="navbar-ex-collapse"><ul class="lead nav navbar-nav navbar-right"><li class="active"><a href="#">Home</a></li><li><a href="#">Contacts</a></li></ul></div></div></div><div class="section text-center"> <div class="container"> <div class="row"> <div class="col-md-12"> <img src="images\GroupWorkers-cropped.jpg" class="img-responsive img-thumbnail"> <h1>A title</h1> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</p></div></div></div></div><div class="section"> <div class="container"> <div class="row"> <div class="col-md-6"> <img src="images\girl-346231_1280.jpg" class="img-responsive"> </div><div class="col-md-6"> <h1>A title</h1> <h3>A subtitle</h3> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p></div></div></div></div><div class="section"> <div class="container"> <div class="row"> <div class="col-md-6"> <h1>A title</h1> <h3>A subtitle</h3> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p></div><div class="col-md-6"> <img src="images\plumber-228010_1280.jpg" class="img-responsive"> </div></div></div></div><div class="section"> <div class="container"> <div class="row"> <div class="col-md-12"> <h1 class="text-center">Team</h1> <p class="text-center">We are a group of skilled individuals.</p></div></div><div class="row"> <div class="col-md-4"> <img src="images\construction_worker_37654.jpg" class="img-circle img-responsive"> <h3 class="text-center">John Doe</h3> <p class="text-center">Developer</p></div><div class="col-md-4"> <img src="images\worker_hat_workers_hard_construction_building-512.png" class="img-circle img-responsive"> <h3 class="text-center">John Doe</h3> <p class="text-center">Developer</p></div><div class="col-md-4"> <img src="images\Workers.png" class="center-block img-circle img-responsive"> <h3 class="text-center">John Doe</h3> <p class="text-center">Developer</p></div></div></div></div></body></html>
+</body></html>
